<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/verventa"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/verventa" />
        <item
            android:id="@+id/addregistro"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/addregistro" />
        <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="Menú"/>
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/masinfo"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/cerrarsesion"/>

    </group>

    <item android:title="Redes Sociales">
        <menu>
            <item
                android:id="@+id/facebook"
                android:icon="@drawable/fb"
                android:title="Facebook" />
            <item
                android:id="@+id/whats"
                android:icon="@drawable/telefono"
                android:title="WhatsApp" />
            <item
                android:id="@+id/instagram"
                android:icon="@drawable/camera"
                android:title="Instagram" />
        </menu>
    </item>

</menu>
