<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/card_viewcat"
    card_view:cardUseCompatPadding="true"
    android:elevation="7dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="155dp"
            android:scaleType="centerCrop"
            android:src="@drawable/desayunos"/>

        <ImageView
            android:id="@+id/imagen2"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="155dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pupusas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/Categoria"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:maxLines="2"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="16sp"
                android:text="@string/descripcion"/>

        </LinearLayout>

        <Button
            android:id="@+id/ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/vermas"/>

    </LinearLayout>

</android.support.v7.widget.CardView>